--- a/Food101.ipynb
+++ b/Food101.ipynb
@@ -37,10 +37,10 @@
     "from tqdm import tqdm \n",
     "import pandas as pd\n",
     "\n",
-    "from ImageModels.Dataset_food_Img_Old import dataset\n",
-    "from ImageModels.Visualizations import plot_samples,plot_samples2,plot_confusion\n",
-    "from ImageModels.TransferModel import Model\n",
-    "from ImageModels.Main import main,Test_ensemble,Get_predictions"
+    "from Dataset_food import dataset\n",
+    "from Visualizations import plot_samples,plot_samples2,plot_confusion\n",
+    "from TransferModel import Model\n",
+    "from Main import main,Test_ensemble,Get_predictions"
    ]
   },
   {
